# phi-evolver

./: README.md  pyproject.toml
class_aux/: background.ini
class_output/: background.ini
example/: check_DE-profile.ipynb  check_evolution.ipynb
src/phi_evolver/: evolver.py
src/phi_evolver.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
